@@ -2,7 +2,7 @@ library("robustbase")
 data("coleman")
 set.seed(1234)  # set seed for reproducibility
 
-## set up folds for cross-validation
+# set up folds for cross-validation
 folds <- cvFolds(nrow(coleman), K = 5, R = 10)
 
 
@@ -14,7 +14,7 @@ cvFitLm <- cvLm(fitLm, cost = rtmspe,
     folds = folds, trim = 0.1)
 
 # perform cross-validation for an MM regression model
-fitLmrob <- lmrob(Y ~ ., data = coleman, k.max = 500)
+fitLmrob <- lmrob(Y ~ ., data = coleman)
 cvFitLmrob <- cvLmrob(fitLmrob, cost = rtmspe, 
     folds = folds, trim = 0.1)
 
@@ -23,7 +23,22 @@ fitLts <- ltsReg(Y ~ ., data = coleman)
 cvFitLts <- cvLts(fitLts, cost = rtmspe, 
     folds = folds, trim = 0.1)
 
+# compare cross-validation results
+cvSelect(LS = cvFitLm, MM = cvFitLmrob, LTS = cvFitLts)
+
+
+## compare raw and reweighted LTS estimators for 
+## 50% and 75% subsets
+
+# 50% subsets
+fitLts50 <- ltsReg(Y ~ ., data = coleman, alpha = 0.5)
+cvFitLts50 <- cvLts(fitLts50, cost = rtmspe, folds = folds, 
+    fit = "both", trim = 0.1)
+
+# 75% subsets
+fitLts75 <- ltsReg(Y ~ ., data = coleman, alpha = 0.75)
+cvFitLts75 <- cvLts(fitLts75, cost = rtmspe, folds = folds, 
+    fit = "both", trim = 0.1)
+
 # combine and plot results
-cvFits <- cvSelect(LS = cvFitLm, MM = cvFitLmrob, LTS = cvFitLts)
-cvFits
-dotplot(cvFits)
+cvSelect("0.5" = cvFitLts50, "0.75" = cvFitLts75)
