@@ -3,7 +3,7 @@ data("coleman")
 set.seed(1234)  # set seed for reproducibility
 
 ## set up folds for cross-validation
-folds <- cvFolds(nrow(coleman), K = 5, R = 10)
+folds <- cvFolds(nrow(coleman), K = 5, R = 50)
 
 
 ## compare LS, MM and LTS regression
@@ -31,3 +31,22 @@ cvFits
 densityplot(cvFitLmrob)
 # plot combined results
 densityplot(cvFits)
+
+
+## compare raw and reweighted LTS estimators for 
+## 50% and 75% subsets
+
+# 50% subsets
+fitLts50 <- ltsReg(Y ~ ., data = coleman, alpha = 0.5)
+cvFitLts50 <- cvLts(fitLts50, cost = rtmspe, folds = folds, 
+    fit = "both", trim = 0.1)
+
+# 75% subsets
+fitLts75 <- ltsReg(Y ~ ., data = coleman, alpha = 0.75)
+cvFitLts75 <- cvLts(fitLts75, cost = rtmspe, folds = folds, 
+    fit = "both", trim = 0.1)
+
+# combine and plot results
+cvFitsLts <- cvSelect("0.5" = cvFitLts50, "0.75" = cvFitLts75)
+cvFitsLts
+densityplot(cvFitsLts)
