@@ -23,11 +23,26 @@ fitLts <- ltsReg(Y ~ ., data = coleman)
 cvFitLts <- cvLts(fitLts, cost = rtmspe, 
     folds = folds, trim = 0.1)
 
-# combine results into one object
+# combine and plot results
 cvFits <- cvSelect(LS = cvFitLm, MM = cvFitLmrob, LTS = cvFitLts)
 cvFits
+dotplot(cvFits)
 
-# plot results for the MM regression model
-densityplot(cvFitLmrob)
-# plot combined results
-densityplot(cvFits)
+
+## compare raw and reweighted LTS estimators for 
+## 50% and 75% subsets
+
+# 50% subsets
+fitLts50 <- ltsReg(Y ~ ., data = coleman, alpha = 0.5)
+cvFitLts50 <- cvLts(fitLts50, cost = rtmspe, folds = folds, 
+    fit = "both", trim = 0.1)
+
+# 75% subsets
+fitLts75 <- ltsReg(Y ~ ., data = coleman, alpha = 0.75)
+cvFitLts75 <- cvLts(fitLts75, cost = rtmspe, folds = folds, 
+    fit = "both", trim = 0.1)
+
+# combine and plot results
+cvFitsLts <- cvSelect("0.5" = cvFitLts50, "0.75" = cvFitLts75)
+cvFitsLts
+dotplot(cvFitsLts)
