@@ -74,22 +74,6 @@ cvFitsLts
 aggregate(cvFitLts50, summary)
 # summary of the combined results
 aggregate(cvFitsLts, summary)
-
-
-## evaluate MM regression models tuned for 
-## 80\%, 85\%, 90\% and 95\% efficiency
-tuning <- list(tuning.psi=c(3.14, 3.44, 3.88, 4.68))
-
-# set up function call
-call <- call("lmrob", formula = Y ~ .)
-# perform cross-validation
-cvFitsLmrob <- cvTuning(call, data = coleman, 
-    y = coleman$Y, tuning = tuning, cost = rtmspe, 
-    folds = folds, costArgs = list(trim = 0.1))
-cvFitsLmrob
-
-# summary of results
-aggregate(cvFitsLmrob, summary)
 }
 \author{
   Andreas Alfons
