@@ -81,25 +81,6 @@ cvFitLts <- cvLts(fitLts, cost = rtmspe,
 cvFits <- cvSelect(LS = cvFitLm, MM = cvFitLmrob, LTS = cvFitLts)
 cvFits
 dotplot(cvFits)
-
-
-## compare raw and reweighted LTS estimators for 
-## 50\% and 75\% subsets
-
-# 50\% subsets
-fitLts50 <- ltsReg(Y ~ ., data = coleman, alpha = 0.5)
-cvFitLts50 <- cvLts(fitLts50, cost = rtmspe, folds = folds, 
-    fit = "both", trim = 0.1)
-
-# 75\% subsets
-fitLts75 <- ltsReg(Y ~ ., data = coleman, alpha = 0.75)
-cvFitLts75 <- cvLts(fitLts75, cost = rtmspe, folds = folds, 
-    fit = "both", trim = 0.1)
-
-# combine and plot results
-cvFitsLts <- cvSelect("0.5" = cvFitLts50, "0.75" = cvFitLts75)
-cvFitsLts
-dotplot(cvFitsLts)
 }
 \author{
   Andreas Alfons
