@@ -59,7 +59,7 @@ data("coleman")
 set.seed(1234)  # set seed for reproducibility
 
 # set up folds for cross-validation
-folds <- cvFolds(nrow(coleman), K = 5, R = 50)
+folds <- cvFolds(nrow(coleman), K = 5, R = 10)
 
 
 ## compare LS, MM and LTS regression
@@ -92,30 +92,6 @@ plot(cvFits, method = "bw")
 plot(cvFits, method = "density")
 plot(cvFits, method = "xy")
 plot(cvFits, method = "dot")
-
-
-## compare raw and reweighted LTS estimators for 
-## 50\% and 75\% subsets
-
-# 50\% subsets
-fitLts50 <- ltsReg(Y ~ ., data = coleman, alpha = 0.5)
-cvFitLts50 <- cvLts(fitLts50, cost = rtmspe, folds = folds, 
-    fit = "both", trim = 0.1)
-
-# 75\% subsets
-fitLts75 <- ltsReg(Y ~ ., data = coleman, alpha = 0.75)
-cvFitLts75 <- cvLts(fitLts75, cost = rtmspe, folds = folds, 
-    fit = "both", trim = 0.1)
-
-# combine results into one object
-cvFitsLts <- cvSelect("0.5" = cvFitLts50, "0.75" = cvFitLts75)
-cvFitsLts
-
-# plot combined results
-plot(cvFitsLts, method = "bw")
-plot(cvFitsLts, method = "density")
-plot(cvFitsLts, method = "xy")
-plot(cvFitsLts, method = "dot")
 }
 \author{
   Andreas Alfons
